# relay-game

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  run.sh
.github/workflows/: ci.yml
backend/: config.py  engine.py  main.py  models.py  protocol.py  registry.py  state.py  timers.py
backend/games/: __init__.py  base.py  game1_rewire.py  game2_sweep.py  game3_decant.py  game4_echo.py  game5_mirror_run.py  template.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  GAMES_SPEC.md  GAME_DESIGN.md  GAME_MODULE_SPEC.md  TASK_LIST.md  WEBSOCKET_PROTOCOL.md
frontend/: app.js  explore.html  games.html  index.html  landing.html  style.css
frontend/games/: decant.js  echo.js  fallback.js  mirror_run.js  rewire.js  sweep.js
game/: RELAY_EXPANSION_GAMES_README.md
legacy/: README.md  README_LEGACY.md
legacy/backend/: __init__.py  game.py  main.py  models.py  puzzles.py  state.py
legacy/frontend/: app.js  index.html  styles.css
legacy/tests/: test_game.py  test_websocket.py
tests/: test_engine.py  test_models.py  test_registry.py  test_server.py  test_state.py  test_timers.py
tests/games/: test_base.py  test_game1_rewire.py  test_game2_sweep.py  test_game3_decant.py  test_game4_echo.py  test_game5_mirror_run.py
